# xchk_git_content

./: .gitignore  apps.py  boot_django.py  course.py  load_tests.py  pyproject.toml  setup.cfg  setup.py
xchk_git_content/: apps.py  contentviews.py  course.py  setup.cfg  strats.py  tests.py  urls.py
xchk_git_content.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xchk_git_content/templates/xchk_git_content/: git_add_remote.html  git_basics_self_test.html  git_log.html  git_pull.html  git_push.html  git_remotes_concept.html  git_stage_changes.html  git_stages.html  git_status.html  git_status_and_gitignore.html  gitignore_concept.html  start_git_init.html  what_is_git.html
