[tool.poetry]
name = "xchk-git-content"
version = "0.1.9"
description = "Course material related to Git for the xchk teaching framework"
authors = ["Vincent Nys <vincentnys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
xchk-regex-strategies = {url = "http://github.com/v-nys/xchk_regex_strategies/tarball/develop"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
