[tool.poetry]
name = "xchk-git-content"
version = "0.1.9"
description = "Course material related to Git for the xchk teaching framework"
authors = ["Vincent Nys <vincentnys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
xchk-core = {git = "git@github.com:v-nys/xchk_core.git", branch="develop"}
xchk-regex-strategies = {git = "git@github.com:v-nys/xchk_regex_strategies.git", branch="develop"}
xchk-multiple-choice-strategies = {git = "git@github.com:v-nys/xchk-multiple-choice-strategies.git", branch="develop"}
django-allauth = "0.40.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
